<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.OrderBelumBayarFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cream"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_12"
                android:layout_marginTop="@dimen/space_2"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:padding="@dimen/space_12"
                android:text="@string/status_pesanan"
                android:textColor="@color/md_brown_400" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_24"
                android:background="@drawable/bg_rounded_order"
                android:fontFamily="@font/nunito_bold"
                android:padding="@dimen/space_12"
                android:text="@string/belum_bayar"
                android:textColor="@color/md_brown_400"
                android:textSize="@dimen/font_body_xss_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_24"
                android:fontFamily="@font/nunito"
                android:padding="@dimen/space_12"
                android:text="@string/diproses"
                android:textColor="@color/md_brown_400"
                android:textSize="@dimen/font_body_xss_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_24"
                android:fontFamily="@font/nunito"
                android:padding="@dimen/space_12"
                android:text="@string/dikirim"
                android:textColor="@color/md_brown_400"
                android:textSize="@dimen/font_body_xss_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_24"
                android:fontFamily="@font/nunito"
                android:padding="@dimen/space_12"
                android:text="@string/selesai"
                android:textColor="@color/md_brown_400"
                android:textSize="@dimen/font_body_xss_size" />

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/item_order_belum_bayar"/>
</LinearLayout>