<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/space_24"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="@dimen/space_24"
        android:id="@+id/appCompatImageView"
        android:layout_width="@dimen/space_64"
        android:layout_height="@dimen/space_64"
        android:src="@drawable/ic_lotus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog"
        android:layout_marginTop="@dimen/space_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/tv_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <TextView
        android:id="@+id/tv_info_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/dialog_login_info"
        android:textColor="#C4C4C4"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_36"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/item_brown_rounded"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/md_white_1000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_dialog"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>